--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "author": "ahmedElkharashy",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "date-fns": "^3.6.0",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.1",
+    "multer": "^1.4.5-lts.1",
     "session": "^0.1.0"
   },
   "devDependencies": {
